--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "svelte-show",
-	"version": "0.0.1",
+	"version": "0.0.3",
+	"repository": "github:Foxeye-Rinx/svelte-show",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -26,6 +27,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.6",
+		"svelte2tsx": "^0.5.13",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.0.0"
